--- a/src/index.html
+++ b/src/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -66,7 +66,7 @@
           <div class="aside__header">
             <nav class="aside__nav">
               <ul class="aside__list">
-                <li class="aside__item">
+                <li class="aside__item--close">
                   <div class="icon-close">
                     <a href="#"><img src="img/icon-x.svg" alt="close item x" /></a>
                   </div>
@@ -475,71 +475,94 @@
           <!----price-content-->
 
           <!--------------------------------------------->
-          <table class="price-table">
-            <tr class="price-title">
-              <td>Ремонтные услуги</td>
-              <td>Цена</td>
-              <td>Срок</td>
-            </tr>
-            <tr class="price-info">
-              <td>Диагностика</td>
-              <td>Бесплатно</td>
-              <td>30 мин</td>
-              <td>
-                <button class="btn__price-card">
-                  <span>заказать</span>
-                  <img src="img/whiteGo.svg" alt="go icon" />
-                </button>
-              </td>
-            </tr>
+          <div class="table-price-wrapper">
+            <div class="price-content-desk">
+              <h3>цены на услуги</h3>
+              <table class="price-table">
+                <tr class="price-title">
+                  <th>Ремонтные услуги</th>
+                  <th>Цена</th>
+                  <th>Срок</th>
+                  <th></th>
+                </tr>
+                <tr class="price-info">
+                  <td>Диагностика</td>
+                  <td>Бесплатно</td>
+                  <td>30 мин</td>
+                  <td>
+                    <button class="btn__price">
+                      <span>заказать</span>
+                      <img src="img/whiteGo.svg" alt="go icon" />
+                    </button>
+                  </td>
+                </tr>
 
-            <tr class="price-info">
-              <td>Замена дисплея</td>
-              <td>1 000 ₽</td>
-              <td>30-120 мин</td>
-              <td>
-                <button class="btn__price-card">
-                  <span>заказать</span>
-                  <img src="img/whiteGo.svg" alt="go icon" />
-                </button>
-              </td>
-            </tr>
-            <tr class="price-info">
-              <td>Замена полифонического динамика</td>
-              <td>1 000 ₽</td>
-              <td>30-120 мин</td>
-              <td>
-                <button class="btn__price-card">
-                  <span>заказать</span>
-                  <img src="img/whiteGo.svg" alt="go icon" />
-                </button>
-              </td>
-            </tr>
-            <tr class="price-info">
-              <td>Тестирование с выдачей технического заключения</td>
-              <td>1 000 ₽</td>
-              <td>30-120 мин</td>
-              <td>
-                <button class="btn__price-card">
-                  <span>заказать</span>
-                  <img src="img/whiteGo.svg" alt="go icon" />
-                </button>
-              </td>
-            </tr>
-            <tr class="price-info">
-              <td>Замена программного обеспечения</td>
-              <td>1 000 ₽</td>
-              <td>30-120 мин</td>
-              <td>
-                <button class="btn__price-card">
-                  <span>заказать</span>
-                  <img src="img/whiteGo.svg" alt="go icon" />
-                </button>
-              </td>
-            </tr>
-          </table>
+                <tr class="price-info">
+                  <td>Замена дисплея</td>
+                  <td>1 000 ₽</td>
+                  <td>30-120 мин</td>
+                  <td>
+                    <button class="btn__price">
+                      <span>заказать</span>
+                      <img src="img/whiteGo.svg" alt="go icon" />
+                    </button>
+                  </td>
+                </tr>
+                <tr class="price-info">
+                  <td>Замена полифонического динамика</td>
+                  <td>1 000 ₽</td>
+                  <td>30-120 мин</td>
+                  <td>
+                    <button class="btn__price">
+                      <span>заказать</span>
+                      <img src="img/whiteGo.svg" alt="go icon" />
+                    </button>
+                  </td>
+                </tr>
+                <tr class="price-info">
+                  <td>Тестирование с выдачей технического заключения</td>
+                  <td>1 000 ₽</td>
+                  <td>30-120 мин</td>
+                  <td>
+                    <button class="btn__price">
+                      <span>заказать</span>
+                      <img src="img/whiteGo.svg" alt="go icon" />
+                    </button>
+                  </td>
+                </tr>
+                <tr class="price-info">
+                  <td>Замена программного обеспечения</td>
+                  <td>1 000 ₽</td>
+                  <td>30-120 мин</td>
+                  <td>
+                    <button class="btn__price">
+                      <span>заказать</span>
+                      <img src="img/whiteGo.svg" alt="go icon" />
+                    </button>
+                  </td>
+                </tr>
+              </table>
+            </div>
+          </div>
+
+          <div class="price__notice">
+            <p class="price__notice-text">Все цены указаны с учетом НДС. Стоимость ремонта указана на единичную услугу. Для получения коммерческого предложения на постоянное обслуживание, оставьте заявку.</p>
+
+            <div class="price__notice-action">
+              <p class="price__notice-link">Получить коммерческое предложение</p>
+              <img src="img/more.svg" alt="icon more" />
+            </div>
+          </div>
         </main>
 
+        <footer class="footer">
+          <div class="footter__top">
+            <span>© 2019 CPS</span> <br>
+            <span class="footer__credits">Разработано командой Apesong</span>
+          </div>
+          <div class="footer__privacy-policy">Политика конфиденциальности</div>
+          <div class="footer__disclaimer">Информация, размещенная на данной странице, не является публичной офертой</div>
+        </footer>
         <!---container-->
       </div>
     </div>
